--- a/pesto_cli/markdown.jinja2
+++ b/pesto_cli/markdown.jinja2
@@ -1,5 +1,5 @@
 {% if front_matter %}---
 {{front_matter|tojson(indent=2)}}
----
-{% endif %}
-{{ fragments_text_content }}
+---{% endif %}{% if not front_matter %}# {{ title }}
+
+{% endif %}{{ fragments_text_content }}
